--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -13,7 +13,7 @@ library(dplyr)
 
 source(here::here("Rcode", "decision_table.R"))
 
-replist <- r4ss::SS_output(here::here("model", "2025_base_model"))
+replist <- r4ss::SS_output(here::here("model", "2025_base_model"), verbose = FALSE, printstats = FALSE)
 inputs <- r4ss::SS_read(here::here("model", "2025_base_model"))
 
 tables <-r4ss::table_all(replist, dir = here::here("report"))
@@ -116,13 +116,15 @@ GMT_filt <- GMT016 |>
          `OFL (mt)` = OFL,
          `ABC (mt)` = ABC,
          `ACL (mt)` = ACL)
-# recent_management_table <- recent_management_table |>
-#   full_join(try, by = c("Year")) |>
-#   select(Year, `OFL (mt).y`, `ABC (mt).y`, `ACL (mt).y`, `Catch (mt)`) |>
-#   rename(`OFL (mt)` = `OFL (mt).y`,
-#          `ABC (mt)` = `ABC (mt).y`,
-#          `ACL (mt)` = `ACL (mt).y`)
-# recent_management_table <- round(recent_management_table)
+
+recent_management_table <- recent_management_table |>
+  full_join(GMT_filt, by = c("Year")) |>
+  select(Year, `OFL (mt).y`, `ABC (mt).y`, `ACL (mt).y`, `Catch (mt)`) |>
+  rename(`OFL (mt)` = `OFL (mt).y`,
+         `ABC (mt)` = `ABC (mt).y`,
+         `ACL (mt)` = `ACL (mt).y`)
+
+recent_management_table <- round(recent_management_table)
 
 
 projections_table[1:2, "Adopted OFL (mt)"] <- GMT016 |>
@@ -184,19 +186,69 @@ all_wa_mt <- bind_rows(mt_na, mt_same_previous, mt_1990_2001, mt_2005_2024) |>
   arrange(year)|>
   rename(`7` = catch)
 
- catch_table <- inputs$dat$catch |>
-   dplyr::select(year, fleet, catch) |>
-   tidyr::pivot_wider(names_from = fleet, values_from = catch) #|>
-#   dplyr::filter(year > 1) |>
-#   rename(`8` = `7`) |>
-#   dplyr::full_join(all_wa_mt) |>
-#   mutate(`7` = case_when(year < 1967 ~ 0,
-#                          TRUE ~ `7`)) |>
-#   select(year, `1`:`6`, `7`, `8`) |>
-#   mutate(Total = round(rowSums(across(`1`:`7`), na.rm = TRUE), 3)) |>
-#   mutate(`7` = case_when(is.na(`7`) ~ " - ",
-#                          TRUE ~ `7`))
+# Catch table using actual weights from WA
+catch_table <- inputs$dat$catch |>
+  dplyr::select(year, fleet, catch) |>
+  tidyr::pivot_wider(names_from = fleet, values_from = catch) |>
+  dplyr::filter(year > 1) |>
+  rename(`8` = `7`) |>
+  dplyr::full_join(all_wa_mt) |>
+  mutate(`7` = case_when(year < 1967 ~ 0,
+                         TRUE ~ `7`)) |>
+  select(year, `1`:`6`, `7`, `8`) |>
+  mutate(Total = round(rowSums(across(`1`:`7`), na.rm = TRUE), 3)) |>
+  mutate(`7` = case_when(is.na(`7`) ~ " - ",
+                         TRUE ~ as.character(`7`)))
+ 
+# Catch table using weights output from SS3 using weight relationship
+WA_rec_weights <- replist$catch |>
+  filter(Fleet == 7) |>
+  select(Yr, dead_bio) |>
+  mutate(dead_bio = round(dead_bio, 3)) |>
+  rename(`7` = dead_bio,
+         year = Yr) |>
+  filter(year > 1888)
+
+catch_table_est_weights <- inputs$dat$catch |>
+  dplyr::select(year, fleet, catch) |>
+  tidyr::pivot_wider(names_from = fleet, values_from = catch) |>
+  dplyr::filter(year > 1) |>
+  rename(`8` = `7`) |>
+  dplyr::full_join(WA_rec_weights, by = "year") |>
+  select(year, `1`:`6`, `7`, `8`) |>
+  mutate(Total = round(rowSums(across(`1`:`7`), na.rm = TRUE), 3))
+  
 ```
+
+
+<!-- Read in models for decision table as well as caption -->
+```{r}
+#| echo: false
+#| eval: true
+
+decision_table_cap <- "TODO: UPDATE PLACEHOLDER DECISION TABLE CAPTION COPIED FROM PETRALE SOLE. Decision table with 10-year projections. 'Mgmt' refers to the three management scenarios (A) the default harvest control rule $P^* = 0.45$, (B) harvest control rule with a lower $P^* = 0.40$. In each case the 2023 and 2024 catches are fixed at the ACLs which have been set for that year with estimated fleet allocation provided  by the GMT. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in trillions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
+
+# # replace mod_out below with calls like
+# mod_low_A <- SS_output(dir_low_A,
+#     verbose = FALSE,
+#     printstats = FALSE,
+#     SpawnOutputLabel = "Spawning Output (trillions of eggs)"
+# )
+
+mod_low_A <- replist
+mod_low_B <- replist
+mod_low_C <- replist
+
+mod_base_A <- replist
+mod_base_B <- replist
+mod_base_C <- replist
+
+mod_high_A <- replist
+mod_high_B <- replist
+mod_high_C <- replist 
+
+```
+
 
 <!-- Create table for nwfsc survey hauls and save as rds file -->
 ```{r}
