--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -1,23 +1,7 @@
-## Tables 
- 
-```{r} 
-#| label: 'set-rda-dir-tbls'
-#| echo: false 
-#| warning: false 
-#| eval: true 
-#| include: false
-# You can save tables to read in as csv or rda files.
-# stockplotr generally uses rda files.
-# I (Kiva) prefer csv files because they are text files that are easier to track and preview with version control.
+# Tables 
+## Data
 
-# There are many ways to incorporate tables into quarto documents.
-# One is using the flextable package via R chunks.
-# For help: https://ardata-fr.github.io/flextable-book/
-
-``` 
-
-### Data
-
+::: {.landscape}
 ```{r}
 #| label: tbl-all_removals
 #| echo: false
@@ -26,6 +10,7 @@
 
 # This table needs to be redone once the WA sport catches are updated
 catch_table |> # produced in 002_load_tables.qmd
+#catch_table_est_weights |> # uncomment this line to use the catch table with estimated weights from the SS3 output
   gt() |>
  cols_label(
     year = "Year",
@@ -36,8 +21,8 @@ catch_table |> # produced in 002_load_tables.qmd
     `5` = "OR-WA non-trawl (mt)",
     `6` = "OR sport (mt)",
     `7` = "WA sport (mt)",
-    #`8` = "WA sport (1000s fish)",
-    #Total = "Total Catch (mt)"
+    `8` = "WA sport (1000s fish)",
+    Total = "Total Catch (mt)"
   ) |>
   tab_options(
     table.font.size = 12,
@@ -45,7 +30,8 @@ catch_table |> # produced in 002_load_tables.qmd
   ) |>
   as_latex()
 ```
-
+:::
+{{< pagebreak >}}
 
 ```{r}
 #| label: tbl-srvy-lat-depth
@@ -93,6 +79,8 @@ data_wide |>
   ) |>
   as_latex()
 ```
+
+{{< pagebreak >}}
 
 ```{r}
 #| label: tbl-sampling-effort-nwfsc
@@ -295,7 +283,7 @@ data_wide |>
 ```
 
 
-### Model results
+## Model results
  
 ```{r}
 #| label: tbl-model-config
@@ -311,6 +299,8 @@ config_table |>
   ) |>
   as_latex()
 ```
+
+{{< pagebreak >}}
 
 ```{r}
 #| label: tbl-n-param
@@ -328,8 +318,9 @@ parcount_table |>
   as_latex()
 ```
 
-::: {.landscape}
+{{< pagebreak >}}
 
+::: {.landscape}
 ```{r}
 #| label: tbl-pars
 #| warning: false
@@ -348,6 +339,8 @@ pars_table |>
 ```
 :::
 
+{{< pagebreak >}}
+
 ```{r}
 #| label: tbl-compweight
 #| warning: false
@@ -363,6 +356,7 @@ compweight_table |>
   as_latex()
 ```
 
+{{< pagebreak >}}
 
 ```{r, results = "asis"}
 #| label: tbl-ts
@@ -388,7 +382,9 @@ kableExtra::kable(
   )
 ```
 
+{{< pagebreak >}}
 
+::: {.landscape}
 ```{r}
 #| label: tbl-sensitivities-like-comps
 #| echo: false
@@ -404,7 +400,9 @@ names(indices_and_comps) <- gsub("X..", "", names(indices_and_comps))
 
 table_sens(indices_and_comps)
 ```
+:::
 
+{{< pagebreak >}}
 
 ```{r}
 #| label: tbl-sensitivities-model-specs
@@ -415,6 +413,7 @@ modeling <- read.csv(here::here("report", "figures", "sensitivities", "modeling_
 table_sens(indices_and_comps)
 ```
 
+{{< pagebreak >}}
 
 ```{r, tbl-ref-points-es, results = "asis"}
 #| label: tbl-ref-points-es
@@ -462,7 +461,7 @@ reference_points_table |>
 
 ```
 
-### Management
+## Management
 
 \pagebreak
 
@@ -507,17 +506,17 @@ projections_table |>
 :::
 
 ```{r, results = "asis"}
-# #| label: tbl-es-decision
-# #| warning: false
-# #| echo: false
-# #| eval: !expr eval_tables 
-# #| tbl-cap: !expr if(eval_tables) decision_table_cap 
-# #| tbl-pos: H
-# table_decision(
-#   list(mod_low_A, mod_base_A, mod_high_A),
-#   list(mod_low_B, mod_base_B, mod_high_B),
-#   list(mod_low_C, mod_base_C, mod_high_C)
-# )
+#| label: tbl-es-decision
+#| warning: false
+#| echo: false
+#| eval: !expr eval_tables 
+#| tbl-cap: !expr if(eval_tables) decision_table_cap 
+#| tbl-pos: H
+ table_decision(
+   list(mod_low_A, mod_base_A, mod_high_A),
+   list(mod_low_B, mod_base_B, mod_high_B),
+   list(mod_low_C, mod_base_C, mod_high_C)
+ )
 
 ```
 
