few fixes to get it to run
Some issues i found:
1. we need to make sure chunk headings are completely unique (some were duplicated in tables and executive)
2. did we change how the pdf is saved? because if a file exists now, it wont overwrite it.

--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -140,8 +140,8 @@ spr_es_table |>
 
 ## Reference points{-}
 
-```{r, tbl-ref-points-es, results = "asis"}
-#| label: tbl-ref-points-es
+```{r, tbl-ref-points-es-1, results = "asis"}
+#| label: tbl-ref-points-es-1
 #| warning: false
 #| echo: false
 #| eval: !expr eval_tables 
@@ -252,8 +252,8 @@ projections_table |>
 
 ## Decision table{-}
 
-```{r, results = "asis"}
-#| label: tbl-es-decision
+```{r, 1, results = "asis"}
+#| label: tbl-es-decision-1
 #| warning: false
 #| echo: false
 #| eval: !expr eval_tables 
