--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -679,7 +679,7 @@ knitr::include_graphics(
 #| fig-cap: "Results from 50 base model runs when starting parameters values are jittered by 0.1 units. Horizontal line indicates base model value."
 #
 knitr::include_graphics(
-    "figures\diagnostics\2025_base_model_jitter_0.1\jitter.png"
+    "figures/diagnostics/2025_base_model_jitter_0.1/jitter.png"
 )
 ```
 
@@ -810,7 +810,7 @@ knitr::include_graphics(
 ```
 
 ```{r}
-#| label: fig-status_assmtns
+#| label: fig-status_assmnts
 #| echo: false
 #| warning: false
 #| eval: true
