--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -8,11 +8,11 @@ Model convergence was evaluated by starting the minimization process from disper
 
 #### Sensitivity to assumptions about model structure
 
-Sensitivity analyses to examine the impact of different assumptions about model structure on management quantities included a model with an estimated natural mortality rate (M), one with estimated steepness (h) of the stock-recruit relationship, and one using the 2017 length-weight relationship. Summaries of model results for these sensitivities are presented in @tbl-sens-mod-results. 
+Sensitivity analyses to examine the impact of different assumptions about model structure on management quantities included a model with an estimated natural mortality rate ($M$), one with estimated steepness ($h$) of the stock-recruit relationship, and one using the 2017 length-weight relationship. Summaries of model results for these sensitivities are presented in @tbl-sens-mod-results. 
 
-The estimated natural mortality was higher than that of the base model (~ 0.053 $year^-1$ compared to ~ 0.044 $year^-1$ from the base model). Estimated steepness is also higher at 0.905, indicating recruitment is more dependent on spawning stock biomass, as opposed to the fixed value of 0.718 from the base model. These results combined suggest that the Yelloweye Rockfish stock may be more productive than assumed in the base model. 
+The estimated natural mortality was slightly higher than that of the base model (~ 0.053 compared to ~ 0.044 from the base model). Steepness was estimated much higher at 0.905, similar to what the 2017 assessment estimated, which would otherwise indicate recruitment is less dependent on the spawning stock biomass, especially at small stock sizes. However, steepness values close to 1 are implausible for slow growing rockfish, supporting the decision to fix steepness at 0.718. 
 
-Model results are considerably sensitive to whether natural mortality or steepness are estimated or fixed, with the alternative models estimating a higher spawning output and a lower depletion status when compared to the base mode (@fig-sens_model_spout and @fig-sens_model_status). However, outputs of the model using the 2017 length-weight relationship showed the base model is not sensitive to this update, with very similar spawning outputs between the base and alternative model (@fig-sens_model_spout to @fig-sens_model_status).   
+Model results are sensitive to whether natural mortality and steepness are estimated or fixed, with the alternative models estimating a higher spawning output and a lower depletion status when compared to the base mode (@fig-sens_model_spout and @fig-sens_model_status). However, outputs of the model using the 2017 length-weight relationship showed the base model is not sensitive to this update, with very similar spawning outputs between the base and alternative model (@fig-sens_model_spout to @fig-sens_model_status).   
 
 #### Sensitivity to data set choice and weighting schemes
 
@@ -27,12 +27,12 @@ General trends in relative depletion (or spawning output) have been relatively s
 
 ### Likelihood Profiles
 
-Likelihood profiles were conducted for natural mortality (𝑀), stock-recruit steepness (ℎ), and equilibrium recruitment (ln𝑅0). These likelihood profiles were conducted by fixing the parameter of interest at specific values and estimating the remaining parameters based on the fixed parameter value.
+Likelihood profiles were conducted for natural mortality ($M$), stock-recruit steepness ($h$), and equilibrium recruitment (ln$R$~0~). These likelihood profiles were conducted by fixing the parameter of interest at specific values and estimating the remaining parameters based on the fixed parameter value.
 
-In the assessment, the 𝑀 was fixed at the value of 0.044, based on Hamel’s prior. The profile analysis over 𝑀 showed that the negative log-likelihood was minimized with a value around 0.052 (@fig-natm-piner), which is close to what was assumed in the assessment. The time series of absolute and relative spawning output associated with different values of 𝑀 ranging from 0.03 to 0.06 are shown in @fig-natm-bratio.
+In the assessment, $M$ was fixed at the value of 0.044, based on Hamel’s prior. The profile analysis over $M$ showed that the negative log-likelihood was minimized with a value around 0.052 (@fig-natm-piner), which is close to what was assumed in the assessment. The time series of absolute and relative spawning output associated with different values of $M$ ranging from 0.03 to 0.06 are shown in @fig-natm-bratio.
 
-In the base model ℎ is fixed at 0.718, like the 2017 assessment, because higher values are implausible given the life-history of slow growing rockfish. The likelihood profile for ℎ shows that the negative log-likelihood for the base model declines with increasing steepness to a value around 0.7 (@fig-steep-piner). Time series of relative unfished biomass associated with different values of steepness ranging from 0.25 to 1.0 are shown in @fig-steep-bratio.
+In the base model $h$ is fixed at 0.718, like the 2017 assessment, because higher values are implausible given the life-history of slow growing rockfish. The likelihood profile for $h$ shows that the negative log-likelihood for the base model declines with increasing $h$ to a value around 0.7, notably different from the sensitivity analysis (@fig-steep-piner). Time series of relative unfished biomass associated with different values of $h$ ranging from 0.25 to 1.0 are shown in @fig-steep-bratio.
 
-A likelihood profile analysis for ln(R0) shows a strongly informed initial recruitment value in the base model (@fig-rzero-piner). Most of the information for this parameter is coming from the length data. Within the length composition likelihood component, all sources of length compositions are equally informative. The index and age data are relatively uninformative. Changes in ln(R0) results in relatively small changes in the scale of the population (@fig-rzero-sp-output and @fig-rzero-parm) compared to the 2017 assessment model. 
+A likelihood profile analysis for ln($R$~0~) shows a strongly informed initial recruitment value in the base model (@fig-rzero-piner). Most of the information for this parameter is coming from the length data. Within the length composition likelihood component, all sources of length compositions are equally informative. The index and age data are relatively uninformative. Changes in ln($R$~0~) results in relatively small changes in the scale of the population (@fig-rzero-sp-output and @fig-rzero-parm) compared to the 2017 assessment model. 
 
 ## Unresolved Problems and Major Uncertainties
