--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -2,7 +2,7 @@
 
 <!--- Provide temporal and spatial resolutions or sample size where appropriate for each of the subsections, below.--->
 
-A summary of available data by type and fleet used in the yelloweye rockfish assessment is available in @fig-data. Data that have changed from the previous assessment are summarized below. No new data sources were considered in this update assessment.
+A summary of available data by type and fleet used in the Yelloweye Rockfish assessment is available in @fig-data. Data that have changed from the previous assessment are summarized below. No new data sources were considered in this update assessment.
 
 Removals: 
 - Post-2016 landings and discards were updated for all three states for the commercial and recreational fleets. 
@@ -35,7 +35,7 @@ Updated fishery-dependent data, including removals, length and age compositions,
 
 A summary of total removals are provided in **@tbl-all_removals** and @fig-catch.
 
-Recent commercial landings (2017-2024) were obtained from [PacFIN](www.pacfin.psmfc.org) for California, Oregon and Washington, and as with the previous assessment, for the period from 2016 through 2023, updated West Coast Groundfish Observer Program (WCGOP) discard estimates were added to PacFIN landings by calculating the proportion of observed area-specific fleet WCGOP discards expanded from the fleet-specific GEMM total recorded discards to obtain the total catch of yelloweye rockfish within commercial fleets. 
+Recent commercial landings (2017-2024) were obtained from [PacFIN](www.pacfin.psmfc.org) for California, Oregon and Washington, and as with the previous assessment, for the period from 2016 through 2023, updated West Coast Groundfish Observer Program (WCGOP) discard estimates were added to PacFIN landings by calculating the proportion of observed area-specific fleet WCGOP discards expanded from the fleet-specific GEMM total recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. 
 
 Bycatch for the At-Sea Pacific Hake fleet (ASHOP) was updated from 2017 through 2024 and included in the trawl fleets for California and Oregon/Washington. 
 
@@ -49,7 +49,7 @@ New commercial age composition data was unavailable for California, but was avai
 
 In combining the new data with the 2017 assessment data, we applied some general processes and fixed minor data entry mistakes found in the old assessment data file. For length composition data, years with small samples sizes (N = 1) were excluded. Sampling statistics (number of samples and number of individual fish) for each fleet and year were used to create length frequency distributions. There were no changes in how commercial length sample numbers were calculated. However, all recent recreational fleet length data were missing the total number of trips information used to calculate the number of samples. Using data from the 2017 assessment, we built fleet-specific linear regressions to approximate the relationship of samples to the number of fish. Then, we applied that regression to the total number of fish for data between 2017 and 2024 to estimate the number of samples. A future benchmark assessment should investigate how to get the number of sampled trips from RecFIN to calculate the number of samples using the @stewart_bootstrapping_2014 method.
 
-We also found that conditional-age-at-length (CAAL) data from the 2017 assessment had all sample sizes and ages doubled, potentially from when Yelloweye Rockfish was changed from a two-sex to single-sex model. To fix the CAAL data so it accurately represented the number of fish in each age class, we either rebuilt the entire fleet’s CAAL dataframe using the most recently pulled information from PacFIN and RecFIN, or divided the number of samples and ages in each length bin by two. 
+We also found that conditional-age-at-length (CAAL) data from the 2017 assessment had all sample sizes and ages doubled, potentially from when Yelloweye Rockfish was changed from a two-sex to single-sex model. For most fleets this was not a problem because the proportions of age-at-length counts were the same, however, some of the commercial fleets included discard ages that were not doubled, leading to small differences in proportions. To fix the CAAL data so it accurately represented the number of fish in each age class, we either rebuilt the entire fleet’s CAAL data frame using the most recently pulled information from PacFIN and RecFIN, or divided the number of samples and ages in each length bin by two. 
 
 How these problems were treated for each fleet specifically is detailed below, including other minor data changes. Otherwise, length and age composition data are unchanged from the previous assessment; please refer to the most recent benchmark assessment [@gertseva_stock_2017] for additional information. 
 
@@ -81,9 +81,9 @@ Two fishery-dependent indices of abundance were updated with new data and up-to-
 
 #### Oregon Onboard Observer CPUE, 2001 – 2024
 
-The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous yelloweye rockfish assessment and updated drift-level catch-per-unit-effort data was obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
+The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous Yelloweye Rockfish assessment and updated drift-level catch-per-unit-effort data was obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
 
-The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include drifts without data needed for CPUE information, long drifts (below 95th quantile), drifts in deeper waters (less than 64fm, 99th quantile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extreme low sample sizes (<50) were excluded. Finally, drifts onboard charters from Port Orford were removed due to small sample size. The final filtered dataset included 6,839 trips with a 6.1% encounter rate for yelloweye rockfish. 
+The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include drifts without data needed for CPUE information, long drifts (below 95th quantile), drifts in deeper waters (less than 64fm, 99th quantile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extreme low sample sizes (<50) were excluded. Finally, drifts onboard charters from Port Orford were removed due to small sample size. The final filtered dataset included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish. 
 
 Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using sdmTMB (version 0.6.0) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC (**Table “model selection”**). Acceptable diagnostics for the model were achieved (@fig-orfs_qqplot). The index of abundance in shown in @fig-ORFS_index and **Table XXXX**. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed (@ORFS_comp). The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013).
 
@@ -91,7 +91,7 @@ Covariates evaluated included year, month, port, the open depths to fishing (all
 
 The Ocean Recreational Boat Survey (ORBS) dockside index for Oregon was updated for this assessment. CPUE, expressed in terms of fish per angler-hour, was calculated by multiplying the number of anglers and the total trip time, minus the boat type-specific travel time. The database contains information on released fish by species (number of angler-reported released fish), effort (angler hours), sample location (port where data were collected), date, bag limits and other relevant regulations, boat type (charter or private), and trip type (e.g., bottom associated fish). 
 
-The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to ORBS trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of yelloweye rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. One, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips (**TABLE “percent_pos.csv”**) from 2004 – 2024 with an overall encounter rate of 7.4%.
+The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to ORBS trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. One, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips (**TABLE “percent_pos.csv”**) from 2004 – 2024 with an overall encounter rate of 7.4%.
 
 Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 ORBS index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in sdmTMB (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series (**TABLE “model_selection.csv”**). Acceptable diagnostics for the model were achieved (@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index and **Table XXXX**. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for PFMC groundfish assessments (sdmTMB). To bridge this change, the 2017 model index structure was applied to the current dataset using sdmTMB and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two sdmTMB indices; however, this appears to be largely driven by the updated modeling approach.
 
@@ -110,9 +110,9 @@ The biomass estimates produced for this assessment using sdmTMB are comparable t
 
 ### IPHC Setline Survey
 
-The IPHC has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (IPHC area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and, therefore, those years are not used in the index. Rockfish bycatch, mainly yelloweye, was recorded during this survey, although values for 1999 and 2001 are estimates based on subsampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed specifically to efficiently sample Pacific halibut, is similar to that used in some earlier line fisheries that targeted adult yelloweye rockfish. Some variability in exact sampling location is unavoidable, and leeway is given in the IPHC methods to center the set on the target coordinates but to allow wind and currents to dictate the actual direction in which the gear is deployed. This can result in different habitats accessed at each fixed location among years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past yelloweye rockfish stock assessments. 
+The IPHC has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (IPHC area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and, therefore, those years are not used in the index. Rockfish bycatch, mainly yelloweye, was recorded during this survey, although values for 1999 and 2001 are estimates based on subsampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed specifically to efficiently sample Pacific halibut, is similar to that used in some earlier line fisheries that targeted adult Yelloweye Rockfish. Some variability in exact sampling location is unavoidable, and leeway is given in the IPHC methods to center the set on the target coordinates but to allow wind and currents to dictate the actual direction in which the gear is deployed. This can result in different habitats accessed at each fixed location among years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past Yelloweye Rockfish stock assessments. 
 
-New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between IPHC and WDFW from 2007-2009 then from 2013-2019 and 2021-2023. These stations are arranged around IPHC station 1082 (one of the more notable stations to encounter yelloweye rockfish). Only the summer months are considered here to match the time of year sampled by the IPHC survey. Survey sets at the WDFW stations used 3 skates with 100 hooks each for most years, except for 2021 - 2023, where a total of 4 skates were used. Like the IPHC survey, effort was standardized to 100 hooks/skate. These stations were integrated into the IPHC stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index, fitting the area of the stock, instead of using state-specific indices. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered yelloweye (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
+New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between IPHC and WDFW from 2007-2009 then from 2013-2019 and 2021-2023. These stations are arranged around IPHC station 1082 (one of the more notable stations to encounter Yelloweye Rockfish). Only the summer months are considered here to match the time of year sampled by the IPHC survey. Survey sets at the WDFW stations used 3 skates with 100 hooks each for most years, except for 2021 - 2023, where a total of 4 skates were used. Like the IPHC survey, effort was standardized to 100 hooks/skate. These stations were integrated into the IPHC stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index, fitting the area of the stock, instead of using state-specific indices. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered yelloweye (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
 
 A log-normal generalized linear model with a log link in the “sdmTMB” R package was used to standardize the CPUE. Model selection using the Akaike Information Criteria for small samples (AICc) was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Diagnostic tools to ensure the model fit was satisfactory included checking whether the hessian matrix is positive definite, the presence of extreme eigenvalues, and if the non-linear minimizer suggests convergence. These diagnostics were conducted with the “sanity( )” function in the sdmTMB package. The updated index is shown in @fig-IPHC_index and compared to the index used in the 2017 index in @fig-IPHC_comparison. 
 
